fix(utility.css): move text-overflow-ellipsis

--- a/src/styles/utility.css
+++ b/src/styles/utility.css
@@ -104,3 +104,9 @@
   max-height: 80vh;
   width: 100%;
 }
+
+.text-overflow-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
